# operating-systems

./: README.md
GutierrezFilter/: CMakeLists.txt  READ-ME  out
GutierrezFilter/src/: BmpProcessor.c  BmpProcessor.h  GutierrezFilters.c  PixelProcessor.c  PixelProcessor.h
GutierrezLoadBalancer/: CMakeLists.txt  InstanceHost.c  InstanceHost.h  LoadBalancer.c  LoadBalancer.h  README.md  User.c  out
GutierrezPageTable/: CMakeLists.txt  GutierrezDataLoader.c  GutierrezPageTable.c  Simulator.c  out
GutierrezSJFL/: CMakeLists.txt  GutierrezSJFL.c  out
ImageProcessor/: CMakeLists.txt  ImageProcessor  readme.txt
ImageProcessor/headers/: BmpProcessor.h  PixelProcessor.h  PpmProcessor.h
ImageProcessor/images/: tttCopy.ppm
ImageProcessor/src/: BmpProcessor.c  GutierrezImageProcessor.c  PixelProcessor.c  PpmProcessor.c
LKM/: .GutierrezLKM.ko.cmd  .GutierrezLKM.mod.cmd  .GutierrezLKM.mod.o.cmd  .GutierrezLKM.o.cmd  .Module.symvers.cmd  .modules.order.cmd  GutierrezLKM.c  GutierrezLKM.ko  GutierrezLKM.mod  GutierrezLKM.mod.c  Makefile  modules.order
